<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyLock</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_all_menu">Select All With Default Lock Setting</string>
    <string name="deselect_all_menu">Deselect All</string>
    <string name="refresh_menu">Refresh</string>
    <string name="appLockerPreferenceActivityName">App Locker Preference</string>
    <string name="service_running">Service is Running</string>

    <!-- Setting -->
    <string name="lock_mode">Lock Mode</string>
    <string name="pattern_lock">Pattern Lock</string>
    <string name="password_lock">Password Lock</string>
    <string name="pattern_lock_mode">Pattern Lock Settings</string>
    <string name="password_lock_mode">Password Lock Settings</string>
    <string name="new_password_lock_mode">Set New Password</string>
    <string name="make_pattern_lock_mode">Make Pattern Visible</string>
    <string name="touch_vibrate">Touch Vibrate</string>
    <string name="pattern_settings">Set Pattern</string>
    <string name="password_settings">Save</string>

    <string name="password">Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_hint">Password hint</string>

    <string name="security_ques_title">Security Settings</string>
    <string name="security_ques_ans_setting">Question Answer Setting</string>
    <string name="security_email_setting">Email Setting</string>
    <string name="security_ques_hint">Security Question</string>
    <string name="security_ans_hint">Security Answer</string>
    <string name="security_email_hint">Security Email</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="home">MyAppLock </string>
    <string name="image_vault">Image Vault</string>
    <string name="video_vault">Video Vault</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="set_default_pwd">Set Default Password</string>

</resources>