<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:checkableBehavior="single">

		<item
			android:id="@+id/home"
			android:checked="false"
			android:icon="@drawable/home"
			android:title="@string/home" />

		<item
			android:id="@+id/image_vault"
			android:checked="false"
			android:icon="@drawable/about"
			android:title="@string/image_vault" />

		<item
			android:id="@+id/video_vault"
			android:checked="false"
			android:icon="@drawable/about"
			android:title="@string/video_vault" />

		<item
			android:id="@+id/settings"
			android:checked="false"
			android:icon="@drawable/settings"
			android:title="@string/settings" />


		<item
			android:id="@+id/about_us"
			android:checked="false"
			android:icon="@drawable/about"
			android:title="@string/about_us" />


	</group>
</menu>