<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.myapplock"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal|center_vertical"
    tools:context=".SetNewPasswordFragment" >


    <android.support.v7.widget.CardView
        android:id="@+id/cv2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#CC212121"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true" >



        <LinearLayout
            android:id="@+id/rl_password_lock_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#607D8B"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/rl_app_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_launcher"
                    android:id="@+id/app_icon_img" />

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/app_icon_img"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/app_name"
                    android:textSize="22sp" />

            </RelativeLayout>
            <View
                android:id="@+id/v_seprator2"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/tv_password_lock_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:textColor="@android:color/black"

                android:textSize="16sp" />


            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:maxLength="15"
                android:padding="5dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword"
                android:maxLength="15"
                android:padding="5dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/edt_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/password_hint"
                android:inputType="text"
                android:maxLength="25"
                android:padding="5dp"
                android:textSize="14sp" >
            </EditText>

            <Button
                android:id="@+id/ll_password_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/set_new_lock_btn_ractangle_drawable"
                android:gravity="center_vertical|center"
                android:minHeight="0dp"
                android:padding="5dp"
                android:text="@string/password_settings"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>