<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"

    android:background="@color/gray_transparent"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_dialog"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_title"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/app_icon_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="AppANme"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>



        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:text="Set new password"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            />

        <LinearLayout
            android:id="@+id/ll_button_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:weightSum="1" >

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:textColor="@android:color/white"
                android:maxLength="15"
                android:padding="5dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword"
                android:textColor="@android:color/white"
                android:maxLength="15"
                android:padding="5dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/edt_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white"
                android:layout_marginTop="5dp"
                android:hint="@string/password_hint"
                android:inputType="text"
                android:maxLength="25"
                android:padding="5dp"
                android:textSize="14sp" >
            </EditText>

            <Button
                android:id="@+id/ll_password_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/set_new_lock_btn_ractangle_drawable"
                android:gravity="center_vertical|center"
                android:minHeight="0dp"
                android:padding="5dp"
                android:text="@string/password_settings"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>