<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:background="@color/notification_template_divider"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/ll_custum_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_dialog"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_dialog_title"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="Set Lock Type"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_button_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:weightSum="1" >

                <RadioButton
                    android:id="@+id/rb_password_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/password_lock"
                    android:textColor="@android:color/white"
                    android:padding="5dp"
                    android:textSize="18sp" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/rb_pattern_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/pattern_lock"
                    android:textColor="@android:color/white"
                    android:maxLength="15"
                    android:padding="5dp"
                    android:textSize="18sp" >
                </RadioButton>


                <Button
                    android:id="@+id/ll_password_setting"
                    android:layout_width="265dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/set_new_lock_btn_ractangle_drawable"
                    android:gravity="center_vertical|center"
                    android:minHeight="0dp"
                    android:padding="5dp"
                    android:layout_margin="10dp"
                    android:text="@string/password_settings"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>